Prow jobs explicitly set it's own resources requests/limit

--- a/config/prow-staging/jobs/config.yaml
+++ b/config/prow-staging/jobs/config.yaml
@@ -49,6 +49,11 @@ presubmits:
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
           value: us-central1
+        resources:
+          requests:
+            memory: 8Gi
+          limits:
+            memory: 8Gi
       volumes:
       - name: repoview-token
         secret:
@@ -86,6 +91,11 @@ presubmits:
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
           value: us-central1
+        resources:
+          requests:
+            memory: 8Gi
+          limits:
+            memory: 8Gi
       volumes:
       - name: repoview-token
         secret:
@@ -123,6 +133,11 @@ presubmits:
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
           value: us-central1
+        resources:
+          requests:
+            memory: 8Gi
+          limits:
+            memory: 8Gi
       volumes:
       - name: repoview-token
         secret:
@@ -161,6 +176,11 @@ presubmits:
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
           value: us-central1
+        resources:
+          requests:
+            memory: 8Gi
+          limits:
+            memory: 8Gi
       volumes:
       - name: repoview-token
         secret:
@@ -198,6 +218,11 @@ presubmits:
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
           value: us-central1
+        resources:
+          requests:
+            memory: 8Gi
+          limits:
+            memory: 8Gi
       volumes:
       - name: repoview-token
         secret:
@@ -235,6 +260,11 @@ presubmits:
           value: /etc/test-account/service-account.json
         - name: E2E_CLUSTER_REGION
           value: us-central1
+        resources:
+          requests:
+            memory: 8Gi
+          limits:
+            memory: 8Gi
       volumes:
       - name: repoview-token
         secret:
