--- a/tools/config-generator/templates/prow_periodic_custom_job.yaml
+++ b/tools/config-generator/templates/prow_periodic_custom_job.yaml
@@ -17,4 +17,5 @@
       [[indent_array_section 6 "args" .Base.Args]]
       [[indent_section 6 "volumeMounts" .Base.VolumeMounts]]
       [[indent_section 6 "env" .Base.Env]]
+      [[indent_section 6 "resources" .Base.Resources]]
     [[indent_section 4 "volumes" .Base.Volumes]]
