--- a/tools/config-generator/templates/prow_postsubmit_custom_job.yaml
+++ b/tools/config-generator/templates/prow_postsubmit_custom_job.yaml
@@ -17,4 +17,5 @@
         [[indent_array_section 8 "args" .Base.Args]]
         [[indent_section 8 "volumeMounts" .Base.VolumeMounts]]
         [[indent_section 8 "env" .Base.Env]]
+        [[indent_section 8 "resources" .Base.Resources]]
       [[indent_section 6 "volumes" .Base.Volumes]]
