--- a/tools/config-generator/templates/prow_presubmit_gocoverate_job.yaml
+++ b/tools/config-generator/templates/prow_presubmit_gocoverate_job.yaml
@@ -24,4 +24,5 @@
         - "--github-token=/etc/covbot-token/token"
         [[indent_section 8 "volumeMounts" .Base.VolumeMounts]]
         [[indent_section 8 "env" .Base.Env]]
+        [[indent_section 8 "resources" .Base.Resources]]
       [[indent_section 6 "volumes" .Base.Volumes]]
