--- a/config/prow-staging/core/config.yaml
+++ b/config/prow-staging/core/config.yaml
@@ -21,21 +21,22 @@ plank:
   job_url_template: 'https://prow-staging.knative.dev/view/gcs/knative-prow-staging/{{if or (eq .Spec.Type "presubmit") (eq .Spec.Type "batch")}}pr-logs/pull{{with .Spec.Refs}}/{{.Org}}_{{.Repo}}{{end}}{{else}}logs{{end}}{{if eq .Spec.Type "presubmit"}}/{{with index .Spec.Refs.Pulls 0}}{{.Number}}{{end}}{{else if eq .Spec.Type "batch"}}/batch{{end}}/{{.Spec.Job}}/{{.Status.BuildID}}/'
   report_template: '[Full PR test history](https://gubernator.knative.dev/pr/{{.Spec.Refs.Org}}_{{.Spec.Refs.Repo}}/{{with index .Spec.Refs.Pulls 0}}{{.Number}}{{end}}). [Your PR dashboard](https://gubernator.knative.dev/pr/{{with index .Spec.Refs.Pulls 0}}{{.Author}}{{end}}).'
   job_url_prefix_config:
-    "*": "https://prow-staging.knative.dev/view/gcs/"
+    '*': https://prow-staging.knative.dev/view/gcs/
   pod_pending_timeout: 60m
-  default_decoration_config:
-    timeout: 7200000000000 # 2h
-    grace_period: 15000000000 # 15s
-    utility_images:
-      # Update these versions when updating plank version in cluster.yaml
-      clonerefs: "gcr.io/k8s-prow/clonerefs:v20200414-8099fb49a"
-      initupload: "gcr.io/k8s-prow/initupload:v20200414-8099fb49a"
-      entrypoint: "gcr.io/k8s-prow/entrypoint:v20200414-8099fb49a"
-      sidecar: "gcr.io/k8s-prow/sidecar:v20200414-8099fb49a"
-    gcs_configuration:
-      bucket: "knative-prow-staging"
-      path_strategy: "explicit"
-    gcs_credentials_secret: "test-account"
+  default_decoration_configs:
+    '*':
+      timeout: 2h
+      grace_period: 15s
+      utility_images:
+        # Update these versions when updating plank version in cluster.yaml
+        clonerefs: "gcr.io/k8s-prow/clonerefs:v20200414-8099fb49a"
+        initupload: "gcr.io/k8s-prow/initupload:v20200414-8099fb49a"
+        entrypoint: "gcr.io/k8s-prow/entrypoint:v20200414-8099fb49a"
+        sidecar: "gcr.io/k8s-prow/sidecar:v20200414-8099fb49a"
+      gcs_configuration:
+        bucket: "knative-prow-staging"
+        path_strategy: "explicit"
+      gcs_credentials_secret: "test-account"
 deck:
   spyglass:
     size_limit: 500000000 # 500MB
@@ -135,7 +136,8 @@ tide:
     knative-sandbox: squash
     google/knative-gcp: squash
   target_url: https://prow-staging.knative.dev/tide
-  pr_status_base_url: https://prow-staging.knative.dev/pr
+  pr_status_base_urls:
+    '*': https://prow-staging.knative.dev/pr
   blocker_label: tide/merge-blocker
   squash_label: tide/merge-method-squash
   rebase_label: tide/merge-method-rebase
