Improve presubmit config check (#1942)
* remove presubmit config check

* Update tools/prow-config-updater/presubmit-checker/README.md

Co-Authored-By: Matt Moore <mattmoor@vmware.com>

* add a custom presubmit job

* an empty commit

Co-authored-by: Matt Moore <mattmoor@vmware.com>

--- a/config/prow/jobs/custom-jobs.yaml
+++ b/config/prow/jobs/custom-jobs.yaml
@@ -14,6 +14,28 @@
 
 presubmits:
   knative/test-infra:
+  - name: pull-test-infra-config-changes-checker
+    decorate: true
+    run_if_changed: "^(config/(prow|prow-staging)/cluster/.*.yaml)|(tools/config-generator/templates/(prow|prow-staging)/.*.yaml)$"
+    cluster: "build-knative"
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+        command:
+        - "go"
+        args:
+        - "run"
+        - "./tools/prow-config-updater/presubmit-checker"
+        - "--github-bot-name=knative-prow-robot"
+        - "--github-token=/etc/repoview-token/token"
+        volumeMounts:
+        - name: repoview-token
+          mountPath: /etc/repoview-token
+          readOnly: true
+      volumes:
+      - name: repoview-token
+        secret:
+          secretName: repoview-token
   - name: pull-test-infra-validate-prow-yaml
     decorate: true
     run_if_changed: "^config/prow/(cluster|core|jobs)/.*.yaml$"
